--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "se_project_react",
-  "homepage": "https://michaelabudde.github.io/se_project_react",
+  "homepage": "https://wtwrapp.ignorelist.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && scp -r ./build/* michaelabudde87@wtwrapp.ignorelist.com:/home/michaelabudde87/frontend"
   },
   "eslintConfig": {
     "extends": [
