--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "se_project_react",
-  "homepage": "https://wtwrapp.ignorelist.com/",
+  "homepage": "https://wtwrapp.ignorelist.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
