--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "gh-pages": "^6.1.1",
-    "jest": "^27.5.1"
+    "gh-pages": "^6.1.1"
   }
 }
